Update the front page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <title>concrete5 公式活用ガイドブック サンプルデータダウンロード＆サポートページ</title>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
 
 </head>
@@ -113,11 +114,365 @@
 					<p><iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&repo=concrete5_japanese_book&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe> <iframe src="http://ghbtns.com/github-btn.html?user=concrete5japan&type=follow&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe></p>
+					<h4>データの解説</h4>
+					<p>ダウンロードされたzipファイルの内容の解説です。</p>
+					<table class="table table-striped">
+						<tr>
+							<td class="level level-0"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> concrete5</td>
+							<td>concrete5で構築したサイト（<a href="http://book.concrete5-japan.org/concrete5/" target="_blank">http://book.concrete5-japan.org/concrete5/</a>）のデータです。実際に運用しているサイトのデータ構造がどうなっているかご覧いただけます。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> blocks</td>
+							<td>このフォルダはユーザー領域のため、コアの設定を上書き・追加しています。ユーザー領域については176ページ参照</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> autonav</td>
+							<td>「オートナビ」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> templates</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> breadcrumbs.php</td>
+							<td>パンくずナビゲーション用のカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> global_nav.php</td>
+							<td>グローバルナビゲーション用のカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> link_list.php</td>
+							<td>フッターなどで使用する横並びのナビゲーション用のカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> date_nav</td>
+							<td>「日付ナビ」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> view.php</td>
+							<td>テーマに合わせてデフォルトテンプレートをオーバーライドしています。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> google_map</td>
+							<td>「Googleマップ」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> templates</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> small</td>
+							<td>小さめの地図を表示するカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-6"><i class="fa fa-file-code-o"></i> view.css</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-6"><i class="fa fa-file-code-o"></i> view.php</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> lunch_menu</td>
+							<td>Designer Contentで作成したブロックタイプです。206ページ参照</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> page_list</td>
+							<td>「ページリスト」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> templates</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> menu_item_list.php</td>
+							<td>メニューページで使用しているカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> news_list.php</td>
+							<td>「ホーム」ページや「ニュース」ページで使用しているニュースの一覧表示用のカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> search</td>
+							<td>「検索」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> templates</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> header.php</td>
+							<td>ヘッダーに置く用のカスタムテンプレート</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> slideshow</td>
+							<td>「スライドショー」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> view.php</td>
+							<td>テーマに合わせてデフォルトテンプレートをオーバーライドしています。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> tags</td>
+							<td>「タグ」ブロック</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> view.php</td>
+							<td>テーマに合わせてデフォルトテンプレートをオーバーライドしています。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> concrete5</td>
+							<td>concrete5のコア領域です。このフォルダの中はカスタマイズしません。コア領域については176ページ参照<br />※ すでにインストール済みのconcrete5でサンプルデータを試したい場合は、このフォルダをアップロードする必要はありません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> config</td>
+							<td>設定ファイルを格納するフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> controllers</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> css</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> elements</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> helpers</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> jobs</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> js</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> languages</td>
+							<td>言語ファイルを格納するフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> libraries</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> mail</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> models</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> packages</td>
+							<td>マーケットプレイスからダウンロードしたアドオンやテーマが格納されるフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> designer_content</td>
+							<td>サンプルサイトでは、Designer Contentアドオン以外は使用していません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> themes</td>
+							<td>テーマファイルを格納するフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> olive_sample</td>
+							<td>書籍で紹介しているサンプルサイトのテーマのフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> elements</td>
+							<td>テーマで使用する共通パーツを格納するフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> footer.php</td>
+							<td>フッター用の共通パーツです。</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> header.php</td>
+							<td>ヘッダー用の共通パーツです。</td>
+						</tr>
+						<tr>
+							<td class="level level-5"><i class="fa fa-file-code-o"></i> header_home.php</td>
+							<td>home.phpから呼び出している、「ホーム」ページタイプ専用のヘッダーパーツです。</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> images</td>
+							<td>テーマで使用する画像を格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> javascripts</td>
+							<td>テーマで使用するJavascriptを格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-3"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> stylesheets</td>
+							<td>テーマで使用するCSSを格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> blog_entry.php</td>
+							<td>ブログ記事用のテンプレートです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> default.php</td>
+							<td>デフォルトのテンプレートです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-text-o"></i> description.txt</td>
+							<td>テーマ名と説明が記載された設定ファイルです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> home.php</td>
+							<td>「ホーム」ページ用のテンプレートです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> left_sidebar.php</td>
+							<td>左側にサイドバーのあるテンプレートです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> main.css</td>
+							<td>テーマの主なスタイルシートファイルです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> main.js</td>
+							<td>テーマの主なJavascriptファイルです。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-image-o"></i> thumbnail.png</td>
+							<td>管理画面の「テーマ」ページで表示されるサムネイル画像です。</td>
+						</tr>
+						<tr>
+							<td class="level level-4"><i class="fa fa-file-code-o"></i> view.php</td>
+							<td>シングルページで使われるテンプレートです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> tools</td>
+							<td>ユーザー領域のフォルダです。サンプルサイトでは特にカスタマイズしていません。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> updates</td>
+							<td>concrete5をバージョンアップした際に、新しいバージョンのconcrete5コアファイルが格納されるフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> concrete5.6.2.1.ja</td>
+							<td>書籍の執筆中にバージョン5.6.2.1日本語版がリリースされてアップデートしたため、このフォルダができています。<a href="http://concrete5-japan.org/help/install/how_to_upgrade/" target="_blank">concrete5のアップデート方法</a></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-text-o"></i> INSTALL</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-text-o"></i> LICENSE.TXT</td>
+							<td>MITライセンスです。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-text-o"></i> humans.txt</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> index.php</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-text-o"></i> robots.txt</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-0"><i class="fa fa-caret-down"></i>&nbsp;<i class="fa fa-folder"></i> mockup</td>
+							<td>concrete5のサイトにする前の、HTMLで作成したコーディングデータ（モックアップ）です。このHTMLをもとに、concrete5をデザインカスタマイズしていく方法を書籍で解説しています。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> images</td>
+							<td>テーマで使用する画像を格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> javascripts</td>
+							<td>テーマで使用するJavascriptを格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-caret-right"></i>&nbsp;<i class="fa fa-folder"></i> stylesheets</td>
+							<td>テーマで使用するCSSを格納しているフォルダです。</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> blog.html</td>
+							<td>ブログ記事の一覧ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> blog_post.html</td>
+							<td>ブログ記事の詳細ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> contact.html</td>
+							<td>「お問い合わせ」ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-image-o"></i> dummy.jpg</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-text-o"></i> humans.txt</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> index.html</td>
+							<td>「ホーム」ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> lunch.html</td>
+							<td>「メニュー」の詳細ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> main.css</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> main.js</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> menu.html</td>
+							<td>「メニュー」の一覧ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> news.html</td>
+							<td>「ニュース」の一覧ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-2"><i class="fa fa-file-code-o"></i> olive.html</td>
+							<td>レストランの紹介ページ</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-file-text-o"></i> README.md</td>
+							<td>GitHubリポジトリ用の説明ファイルです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-file-image-o"></i> cover.png</td>
+							<td>このサポートページ用の画像です。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-file-code-o"></i> index.html</td>
+							<td>このサポートページです。</td>
+						</tr>
+						<tr>
+							<td class="level level-1"><i class="fa fa-file-code-o"></i> style.css</td>
+							<td>このサポートページ用のスタイルシートファイルです。</td>
+						</tr>
+					</table>
 				</section>
 				<section id="updates">
 					<div class="page-header">
 						<h3>訂正情報</h3>
 					</div>
+					<h4>誤記</h4>
+					<ul>
+					    <li>P.007 concrete5の事例の筑波学院大学は出版後WordPressでリニューアルされましたのでconcrete5の事例ではなくなりました。最新の事例は公式サイト<a href="http://concrete5-japan.org/community/forums/showcase/" target="_blank">ショーケース</a>をご覧ください。</li>
+					    <li>P.145 のテーマのファイル構成に <code>themes/olive_sample/elements/global_nav.php</code> というファイルが記載されていますが、開発中に一時的に作成したものの最終的に削除したファイルでした。ダウンロードデータや本の解説には含まれていないファイルです。</li>
+					</ul>
+					<h4>concrete5のバージョンアップに伴う変更</h4>
 					<iframe src="http://www.slideshare.net/slideshow/embed_code/35857979" width="512" height="421" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px 1px 0; margin-bottom:5px; max-width: 100%;" allowfullscreen></iframe>
 					<p><a href="https://www.slideshare.net/HishikawaTakuro/concrete5-5631" title="concrete5 5.6.3.1日本語版の紹介" target="_blank">concrete5 5.6.3.1日本語版の紹介</a> - 書籍で紹介しているバージョン5.6.2.1からの変更内容を紹介しています。</p>
 				</section>
