--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
 					<h4>誤記</h4>
 					<ul>
 					    <li>P.007 concrete5の事例の筑波学院大学は出版後WordPressでリニューアルされましたのでconcrete5の事例ではなくなりました。最新の事例は公式サイト<a href="http://concrete5-japan.org/community/forums/showcase/" target="_blank">ショーケース</a>をご覧ください。</li>
+					    <li>P.024 XAMPPのバージョン1.8.3では書籍で紹介している設定ではうまくインストールができないことがあるようです。公式サイトの<a href="http://concrete5-japan.org/help/install/install-xampp/" target="_blank">XAMPPのインストール</a>をご覧ください。</li>
 					    <li>P.145 のテーマのファイル構成に <code>themes/olive_sample/elements/global_nav.php</code> というファイルが記載されていますが、開発中に一時的に作成したものの最終的に削除したファイルでした。ダウンロードデータや本の解説には含まれていないファイルです。</li>
 					</ul>
 					<h4>concrete5のバージョンアップに伴う変更</h4>
